KB-12130 : Q9 | DEV | Dynamic certification Generation Prod issues and memory spike issues